[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Black.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Blue.png" type="Texture" id=3]
[ext_resource path="res://Assets/Roboto-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Music/explo1.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sprites/bulletDark1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/bulletLarge.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/bulletInc.png" type="Texture" id=8]
[ext_resource path="res://Music/battle2.wav" type="AudioStream" id=9]
[ext_resource path="res://Music/Sad Background Music _ No Copyright Sounds [ NCS Collection ]-[AudioTrimmer.com].wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Green.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( 0, -1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ProHUDAmmo" type="TextureProgress" parent="."]
margin_left = 1192.0
margin_top = 119.0
margin_right = 1472.0
margin_bottom = 164.0
rect_scale = Vector2( 2, 2 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.0431373, 0, 0.792157, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ProHUDAmmo"]
margin_right = 40.0
margin_bottom = 14.0
text = "Current Ammo: "

[node name="ProHUDHP" type="TextureProgress" parent="."]
margin_left = 80.0
margin_top = 119.0
margin_right = 360.0
margin_bottom = 164.0
rect_scale = Vector2( 2, 2 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 12 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ProHUDHP"]
margin_right = 40.0
margin_bottom = 14.0
text = "Current Health: "

[node name="Hud" type="Label" parent="."]
margin_left = 64.0
margin_top = 23.0
margin_right = 850.0
margin_bottom = 45.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="."]
margin_left = 1672.0
margin_top = 39.0
margin_right = 1779.0
margin_bottom = 68.0
rect_scale = Vector2( 2, 2 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unpause" type="Button" parent="."]
margin_left = 672.0
margin_top = 439.0
margin_right = 958.0
margin_bottom = 487.0
rect_scale = Vector2( 2, 2 )
text = "Unpause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 672.0
margin_top = 551.0
margin_right = 958.0
margin_bottom = 599.0
rect_scale = Vector2( 2, 2 )
text = "Quit to menu losing all progress "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Data" type="Label" parent="."]
margin_left = 656.0
margin_top = 127.0
margin_right = 784.0
margin_bottom = 172.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Over" type="Label" parent="."]
margin_left = 792.0
margin_top = 287.0
margin_right = 952.0
margin_bottom = 346.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="Over"]
margin_left = -4.0
margin_top = 264.0
margin_right = 169.0
margin_bottom = 319.0
text = "Back to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Over"]
margin_left = -4.0
margin_top = 319.0
margin_right = 169.0
margin_bottom = 374.0
text = "Restart game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="RichTextLabel" parent="Over"]
margin_left = 242.0
margin_top = 75.0
margin_right = 302.0
margin_bottom = 190.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalCash" type="RichTextLabel" parent="Over"]
margin_left = -198.3
margin_top = 73.7619
margin_right = -105.3
margin_bottom = 150.762
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="TypePic" type="AnimatedSprite" parent="."]
position = Vector2( 1120, 215 )
scale = Vector2( 5, 5 )
frames = SubResource( 2 )

[node name="TypeText" type="Label" parent="."]
margin_left = 960.0
margin_top = 119.0
margin_right = 1027.0
margin_bottom = 133.0
rect_scale = Vector2( 3, 3 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Play" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Unpause" to="." method="_on_Unpause_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Over/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Over/Restart" to="." method="_on_Restart_pressed"]
[connection signal="finished" from="Death" to="." method="_on_Death_finished"]
[connection signal="finished" from="End" to="." method="_on_End_finished"]
[connection signal="finished" from="Play" to="." method="_on_Play_finished"]
